[project]
name = "investengine_csv_server"
version = "0.1.0"
description = "Server for merging trading CSV files"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pandas",
    "jinja2",
    "python-multipart",
    "plotly",
    "yfinance>=0.2.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
